Latest changes might exist on the GitHub repository.
Please check: https://github.com/INTER-Mediator/INTER-Mediator
Also the Migration Guide (Japanese) might be informative:
  http://inter-mediator.info/ja/for-developers/migration.html

Ver.6-dev (in development)
- All communications go async.
- Version number of major build is assigned as interger number.
- The following methods are removed.
      INTERMediator_DBAdapter.server_access
      INTERMediator_DBAdapter.db_query
      INTERMediator_DBAdapter.db_queryWithAuth
      INTERMediator_DBAdapter.db_update
      INTERMediator_DBAdapter.db_updateWithAuth
      INTERMediator_DBAdapter.db_delete
      INTERMediator_DBAdapter.db_deleteWithAuth
      INTERMediator_DBAdapter.db_createRecord
      INTERMediator_DBAdapter.db_createRecordWithAuth
      INTERMediator_DBAdapter.db_copy
      INTERMediator_DBAdapter.db_copyWithAuth
- Deprecated global variables $g_dbInstance, $g_serverSideCall in INTER-Mediator.php are removed.
- [BUG FIX] Buttons on pagination (ex. Insert...) was disappeared in case of clicking Insert button on related context.

Ver.5.8-dev (in development)
- Improve speed performance of Native Authentication.
- [WIP] Support FileMaker Data API (Trial) of FileMaker Server 16.
- Support retrieving image files in container fields in FileMaker Data API (Trial).
- Add JSEncrypt <http://travistidwell.com/jsencrypt/> to "js_lib" directory in "lib" directory and
  remove "bi2php" from "lib" directory to improve speed performance of Native Authentication.
- Update FMDataAPI.php (Ver.7) for FileMaker Data API (Trial).

Ver.5.7 (March 29, 2018)
- The "data-im-format" attribute is introduced.
  Please see for detail: <http://inter-mediator.info/ja/for-developers/format.html> (Japanese)
- Microsoft SQL Server is contained in INTER-Mediator support database.
- Support PHP 7.2.
- Start to support FileMaker Data API (Trial) of FileMaker Server 16 as an experimental feature.