@@ -1,1 +1,1 @@
-{"version":"6-dev","releasedate":"2018-04-15"}
+{"version":"6-dev","releasedate":"2018-04-16"}
