@@ -13,6 +13,7 @@ Also the Migration Guide (Japanese) might be informative:
 Ver.6-dev (in development)
 - All communications go async.
 - Version number of major build is assigned as interger number.
+- The script "dist-docs/build.sh" can call with parameter -a/-c/-d. Moreover it contains "deployment mode."
 - The following methods are removed.
       INTERMediator_DBAdapter.server_access
       INTERMediator_DBAdapter.db_query
